# tauri-plugin-gotbackup

./: Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
src/: lib.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
