[package]
name = "tauri-plugin-gotbackup"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.4" }
serde = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
futures-util = "0.3.30"
read-progress-stream = "1.0.0"
tokio = { version = "1.36.0", features = ["fs"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde_json = "1.0.113"
