[package]
name = "tauri-plugin-gotbackup"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
read-progress-stream = "1.0.0"
